== 0.2.0

* Added .eql? to AST
* Added .eql? to LexicalUnits 
* Added .hash to LexicalUnits 

== 0.1.1

* Added specificity to selectors.
* Added == to selector ASTs.
* Added =~ to selector ASTs.  The object passed in to =~ must quack like an
  hpricot node.  It must implement the following methods: name, parent, child,
  next_sibling, attributes.
* Added .to_xpath to the selector AST.
* Fixed a bug where functions as pseudo classes didn't parse.

== 0.1.0

* Birthday!
