@@ -13,6 +13,10 @@ module CSS
         def ==(other)
           self.class === other && selector_type == other.selector_type
         end
+        
+        def hash
+          selector_type.hash
+        end
 
         def eql?(other)
           self == other
