@@ -1,6 +1,15 @@
 require File.dirname(__FILE__) + "/helper"
 
 class ElementSelectorTest < SelectorTestCase
+  def test_hash
+    first = ElementSelector.new(1)
+    second = ElementSelector.new(1)
+    assert_equal first.hash, second.hash
+
+    third = ElementSelector.new(2)
+    assert_not_equal first.hash, third.hash
+  end
+
   def test_equals2
     first = ElementSelector.new(1)
     second = ElementSelector.new(1)
